[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="tspwplib"
authors = [
    {name = "Patrick O'Hara", email = "patrick.h.o-hara@warwick.ac.uk"},
]
urls = {Code = "https://github.com/PatrickOHara/tspwplib", Documentation = "https://patrickohara.github.io/tspwplib/", Download = "https://pypi.org/project/tspwplib/", Homepage = "https://github.com/PatrickOHara/tspwplib", Issues = "https://github.com/PatrickOHara/tspwplib/issues"}
description="Library of instances for TSP with Profits"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["TSP"]
license = {text = "MIT"}
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "networkx>=3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pydantic>=2.5.3",
    "pyyaml>=6.0",
    "tsplib95@git+https://github.com/ben-hudson/tsplib95.git",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["tspwplib"]

[tool.setuptools_scm]
version_file = "tspwplib/_version.py"

[tool.black]
exclude = "_version.py"
